samples/_failures_safe/1761343883_ccdb2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2b3bbc1.c: In function ‘main’:
./samples/SAFE/__tmp_a2b3bbc1.c:141:21: error: expected ‘;’ at end of input
  141 |     transpose_matrix
      |                     ^
      |                     ;
./samples/SAFE/__tmp_a2b3bbc1.c:141:5: error: expected declaration or statement at end of input
  141 |     transpose_matrix
      |     ^~~~~~~~~~~~~~~~
